将用户ID 转换为Int